Fix ace editor height jump on load
The critical part was:

```
.ace_editor {
  line-height: 20px;
}
```

Which allows ace/brace FontMetrics to get a consistent text height when
it calls `$measureNode`:

https://github.com/ajaxorg/ace/blob/v1.2.3/lib/ace/layer/font_metrics.js#L151

--- a/src/components/JsonEditor.css
+++ b/src/components/JsonEditor.css
@@ -9,6 +9,9 @@
     color: var(--textColor);
     background-color: white;
     font-family: 'Source Code Pro', monospace;
-    font-size: 14px;
   }
+}
+
+.ace_editor {
+  line-height: 20px;
 }
