--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,7 +10,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Source Sans Pro', sans-serif;
-  font-size: 16px;
   color: var(--textColor);
 }
 
